# stencil

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml  index.html  package.json
.claude/: settings.json
.claude/agents/: stencil-operator.md
.claude/hooks/: allowed-origins.json  guard.mjs  guard.test.mjs
.claude/rules/: core-changes.md  no-dependencies.md  security.md
.github/workflows/: ci.yml  release.yml
bot/: .env.example  Dockerfile  README.md  Stencil.TelegramBot.slnx  nuget.config
browser/: Dockerfile  README.md  index.html  launch.html  manifest.webmanifest  nginx.conf  package.json  sw.js
browser/css/: animations.css  components.css  layout.css  theme.css
browser/js/: index.js  prePaintTheme.js  pwa.js  utils.js
cli/: CONTRACT.md  Dockerfile  README.md  build.zig  build.zig.zon  test_root.zig
core/: CMakeLists.txt  README.md  WASM.md  cliApi.cpp  cliApi.h  rgba.hpp  text.hpp  wasmApi.cpp
core/color/: color.cpp  colorNames.cpp  colorNames.hpp  hexNibble.hpp  imageFilter.cpp  imageFilter.hpp
core/geometry/: cropGeometry.cpp  cropGeometry.hpp  geometry.cpp  geometry.hpp  imageOps.cpp  imageOps.hpp  rasterize.cpp  rasterize.hpp
core/page/: hotkeyFormat.cpp  hotkeyFormat.hpp  pageMetrics.cpp  pageMetrics.hpp  tooltipRows.hpp
core/parse/: cropSpec.cpp  cropSpec.hpp  durationParser.cpp  durationParser.hpp  formulaParser.cpp  formulaParser.hpp  lengthTokens.cpp  lengthTokens.hpp
core/state/: historyStack.cpp  historyStack.hpp  holdDraw.cpp  holdDraw.hpp  projectsStore.cpp  projectsStore.hpp  zoomPan.hpp
core/tests/: bench.test.cpp  cliApi.test.cpp  color.test.cpp  colorNames.test.cpp  cropGeometry.test.cpp  cropSpec.test.cpp  durationParser.test.cpp  formula.test.cpp  geometry.test.cpp  history.test.cpp  holdDraw.test.cpp  hotkeyFormat.test.cpp  imageFilter.test.cpp  imageOps.test.cpp  lengthTokens.test.cpp  localeUnit.test.cpp  pageMetrics.test.cpp  projectsStore.test.cpp  rasterize.test.cpp  tooltipRows.test.cpp  wasmApi.test.cpp  zoomPan.test.cpp
css/: components.css  layout.css  theme.css
desktop/: CMakeLists.txt  README.md  WASM.md
desktop/core/: color.cpp  color.hpp  cropGeometry.cpp  cropGeometry.hpp  formulaParser.cpp  geometry.cpp  geometry.hpp  historyStack.cpp  hotkeyFormat.hpp  imageFilter.hpp  localeUnit.cpp  localeUnit.hpp  models.hpp  pageMetrics.cpp  pageMetrics.hpp  projectsStore.cpp  projectsStore.hpp  tooltipRows.cpp  tooltipRows.hpp  wasmApi.cpp  zoomPan.cpp
desktop/gui/: blankImageDialog.cpp  canvasTooltip.cpp  canvasTooltip.hpp  canvasWidget.cpp  canvasWidget.hpp  cropDialog.cpp  cropDialog.hpp  fileStore.cpp  fileStore.hpp  guiHelpers.cpp  guiHelpers.hpp  infoDialog.cpp  launchOptions.cpp  launchOptions.hpp  linksDialog.hpp  main.cpp  mainWindow.cpp  mainWindow.hpp  mediaLoader.cpp  mediaLoader.hpp  notifications.cpp  notifications.hpp  projectsDialog.cpp  projectsDialog.hpp  selectionPanel.cpp  selectionPanel.hpp  settingsDialog.cpp  settingsDialog.hpp  shortcutsDialog.cpp  shortcutsDialog.hpp  theme.cpp  theme.hpp
desktop/packaging/: MacOSXBundleInfo.plist.in  make-appicon-assets.sh  make-icns.sh  stencil-mime.xml  stencil.desktop
desktop/resources/: app.qrc
desktop/src/app/: dataExportController.cpp  dataExportController.hpp  deepLink.cpp  deepLink.hpp  launchOptions.cpp  launchOptions.hpp  main.cpp  mainWindow.cpp  mainWindow.hpp  projectTransferController.cpp  projectTransferController.hpp  remoteSession.cpp  remoteSession.hpp  remoteSyncController.cpp  remoteSyncController.hpp  selectionPanel.cpp  selectionPanel.hpp
desktop/src/canvas/: canvasWidget.cpp  canvasWidget.hpp  dropZonesOverlay.hpp  incognitoOverlay.cpp  incognitoOverlay.hpp  projectDragZones.hpp
desktop/src/dialogs/: blankImageDialog.cpp  blankImageDialog.hpp  connectDialog.cpp  connectDialog.hpp  cropDialog.cpp  cropDialog.hpp  expirationDialog.cpp  expirationDialog.hpp  infoDialog.cpp  infoDialog.hpp  linksDialog.cpp  linksDialog.hpp  openImageDialog.cpp  openImageDialog.hpp  openInDialog.cpp  openInDialog.hpp  projectsDialog.cpp  projectsDialog.hpp  reorderableListWidget.hpp  settingsDialog.cpp  settingsDialog.hpp  shortcutsDialog.cpp  shortcutsDialog.hpp
desktop/src/io/: fileStore.cpp  fileStore.hpp  mediaLoader.hpp
desktop/src/net/: connectionStore.cpp  connectionStore.hpp  liveFeed.cpp  liveFeed.hpp  serverClient.cpp  serverClient.hpp
desktop/src/support/: guiHelpers.cpp  guiHelpers.hpp  iconSet.cpp  iconSet.hpp  notifications.cpp  searchCombo.cpp  searchCombo.hpp  theme.cpp  theme.hpp
desktop/tests/: coEdit.headless.cpp  color.test.cpp  cropCanvas.headless.cpp  cropGeometry.test.cpp  deepLink.headless.cpp  formula.test.cpp  geometry.test.cpp  history.test.cpp  holdDrawCanvas.headless.cpp  hotkeyFormat.test.cpp  imageFilter.test.cpp  imageFixture.headless.cpp  layoutMeta.headless.cpp  liveFeed.headless.cpp  localeUnit.test.cpp  mainWindow.gui.cpp  pageMetrics.test.cpp  projectColor.headless.cpp  projectFile.headless.cpp  projectKeywords.headless.cpp  projectTransfer.headless.cpp  projectsStore.test.cpp  testMain.cpp  tooltipRows.test.cpp  wasmApi.test.cpp  zoomPan.test.cpp
e2e/: README.md  package-lock.json  package.json  playwright.config.js
extension/: README.md  manifest.json  package.json
mcp/: .env.example  Cargo.toml  Dockerfile  README.md
mcp/src/: args.rs  config.rs  deliver.rs  layout.rs  lib.rs  locate.rs  main.rs  outcome.rs  pipeline.rs  server.rs
mcp/tests/: args_test.rs  e2e_test.rs  fixtures_test.rs  outcome_test.rs
pystencil/: README.md  build.py  pyproject.toml
pystencil/pystencil/: __init__.py  __main__.py  _native.py  cli.py  codecs.py  core.py  editor.py  image.py  layout.py  server.py  sitesource.py
pystencil/tests/: test_cli.py  test_codecs.py  test_core.py  test_editor.py  test_layout.py  test_projectfile.py  test_server.py  test_sitesource.py
server/: .dockerignore  .env.example  Dockerfile  README.md  go.mod  go.sum
tests/: color.test.js  formula.test.js  geometry.test.js  history.test.js  hotkeys.test.js  projects-markup.test.js  projectsStore.test.js
(+416 files in other folders)
