[package]
name = "stencil-mcp"
version = "0.1.0"
edition = "2021"
description = "Model Context Protocol server exposing Stencil's image/video editing pipeline (wraps the Zig CLI)"
license = "MIT"

[[bin]]
name = "stencil-mcp"
path = "src/main.rs"

[dependencies]
# Official Rust MCP SDK. `server` brings ServerHandler/ToolRouter, `transport-io`
# brings the stdio transport, `macros` brings the #[tool_router]/#[tool] attributes.
rmcp = { version = "1", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tempfile = "3"
base64 = "0.22"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
